--- a/fonts/asap/stylesheet.css
+++ b/fonts/asap/stylesheet.css
@@ -28,3 +28,34 @@
     font-style: italic;
 }
 
+/*Akkurat Font*/
+@font-face {
+    font-family: 'Akkurat';
+    src: url('Akkurat-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Akkurat';
+    src: url('Akkurat-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Akkurat';
+    src: url('Akkurat-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Akkurat';
+    src: url('Akkurat-Light.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+
+
